<?xml version="1.0"?>
<package>
  <name>rosbag_panel</name>
  <version>0.0.1</version>
  <description>RViz plugin to control rosbag play.</description>

  <maintainer email="andreas.reich@unibw.de">Andreas Reich</maintainer>

  <license>BSD</license>
  <author email="bianca.forkel@unibw.de">Bianca Forkel</author>
  <author email="andreas.reich@unibw.de">Andreas Reich</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>qtbase5-dev</build_depend>
  <build_depend>rviz</build_depend>
  <build_depend>rosbag</build_depend>

  <run_depend>libqt5-core</run_depend>
  <run_depend>libqt5-gui</run_depend>
  <run_depend>libqt5-widgets</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>rosbag</run_depend>
  <run_depend>cv_bridge</run_depend>

  <export>
      <rviz plugin="${prefix}/plugin_description.xml"/>
  </export>
</package>
